horizontal scroll fix

--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -116,7 +116,7 @@
 
   &__bottom {
     margin: 121px auto 0;
-    width: 1063px;
+    max-width: 1063px;
 
     display: flex;
     justify-content: space-between;
